src/objects/Archival__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Database_Type__c</fullName>
        <defaultValue>&quot;mySQL&quot;</defaultValue>
        <description>roundData database type (used to retrieve archive records)</description>
        <inlineHelpText>roundData database type (used to retrieve archive records)</inlineHelpText>
        <label>Database Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <description>roundData database name (used to retrieve archive records)</description>
        <inlineHelpText>roundData database name (used to retrieve archive records)</inlineHelpText>
        <label>Database</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <description>roundData database host name (used to retrieve archive records)</description>
        <inlineHelpText>roundData database host name (used to retrieve archive records)</inlineHelpText>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>roundData database password (used to retrieve archive records)</description>
        <inlineHelpText>roundData database password (used to retrieve archive records)</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <defaultValue>&quot;3306&quot;</defaultValue>
        <description>roundData database port (used to retrieve archive records)</description>
        <inlineHelpText>roundData database port (used to retrieve archive records)</inlineHelpText>
        <label>Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schema__c</fullName>
        <description>roundData database schema (used to retrieve archive records)</description>
        <inlineHelpText>roundData database schema (used to retrieve archive records)</inlineHelpText>
        <label>Schema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>roundData database user name (used to retrieve archive records)</description>
        <inlineHelpText>roundData database user name (used to retrieve archive records)</inlineHelpText>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>restapi_CampaignMember__c</fullName>
        <description>the RESTAPI URL for CampaignMember object</description>
        <inlineHelpText>the RESTAPI URL for CampaignMember object</inlineHelpText>
        <label>restapi_CampaignMember</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_Case__c</fullName>
        <description>the RESTAPI URL for the Case object</description>
        <inlineHelpText>the RESTAPI URL for the Case object</inlineHelpText>
        <label>restapi_Case</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_OpportunityLineItem__c</fullName>
        <description>the RESTAPI URL for OpportunityLineItem object</description>
        <inlineHelpText>the RESTAPI URL for OpportunityLineItem object</inlineHelpText>
        <label>restapi_OpportunityLineItem</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_Opportunity__c</fullName>
        <description>the RESTAPI URL for the Opportunity object</description>
        <inlineHelpText>the RESTAPI URL for the Opportunity object</inlineHelpText>
        <label>restapi_Opportunity</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_Task__c</fullName>
        <description>the RESTAPI URL for the Task object</description>
        <inlineHelpText>the RESTAPI URL for the Task object</inlineHelpText>
        <label>restapi_Task</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_rC_Bios_Preferences_c__c</fullName>
        <label>restapi_rC_Bios_Preferences__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_rC_Giving_Deliverable_c__c</fullName>
        <description>the RESTAPI URL for rC_giving_Deliverable object</description>
        <inlineHelpText>the RESTAPI URL for rC_giving_Deliverable object</inlineHelpText>
        <label>restapi_rC_Giving_Deliverable__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_rC_Giving_Opportunity_Credit_c__c</fullName>
        <description>the RESTAPI URL for the rC_Giving__Opportunity_Credit__c object</description>
        <inlineHelpText>the RESTAPI URL for the rC_Giving__Opportunity_Credit__c object</inlineHelpText>
        <label>restapi_rC_Giving__Opportunity_Credit__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_rC_Giving_Opty_Allocation_c__c</fullName>
        <description>the RESTAPI URL for the rC_Giving__Opportunity_Allocation__c object</description>
        <inlineHelpText>the RESTAPI URL for the rC_Giving__Opportunity_Allocation__c object</inlineHelpText>
        <label>restapi_rC_Giving__Opty_Allocation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>restapi_rC_Giving_Payment_Method_c__c</fullName>
        <description>the RESTAPI URL for the rC_Giving__Payment_Method__c object</description>
        <inlineHelpText>the RESTAPI URL for the rC_Giving__Payment_Method__c object</inlineHelpText>
        <label>restapi_rC_Giving__Payment Method__c</label>
        <type>Url</type>
    </fields>
    <label>Archival</label>
</CustomObject>